k8s/kustomize/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-project
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: python-project
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
